fix: why-choose section-desc align

--- a/css/style.css
+++ b/css/style.css
@@ -11478,6 +11478,11 @@ ul.children {
     font-size: 140px;
   }
 }
+.why-choose-us-area .section-desc {
+  height: 100%;
+  display: flex;
+  align-items: end;
+}
 @media (max-width: 991px) {
   .why-choose-us-area .section-desc {
     margin-top: 24px;
