--- a/sass/modules/_why-choose-us-area.scss
+++ b/sass/modules/_why-choose-us-area.scss
@@ -24,6 +24,9 @@
             }
         }
         .section-desc {
+            height: 100%;
+            display: flex;
+            align-items: end;
             @include rmaxwd(991) {
                 margin-top: 24px;
             }
